--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,10 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #010e1b;
+  background: url("../img/background/bg.jpg");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   left: 0;
   right: 0;
   top: 0;
